--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mattrglobal/jsonld-signatures-bbs": "^0.9.0",
     "bs58": "4.0.1",
+    "cross-fetch": "^3.1.4",
     "esm": "^3.2.25",
     "hi-base32": "^0.5.1",
     "jsonld": "3.1.0",
