updating instructions of use

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Verifiable QR SDK for BBS+ Vaccination Credentials with CBOR-LD",
   "scripts": {
     "test": "mocha",
+    "keys" : "node scripts/generateKeys.js",
     "webpack": "webpack --config webpack.config.js"
   },
   "author": "Vitor Pamplona",
