--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "main": "lib/index.js",
   "module": "lib/main.js",
+  "react-native": "lib/main.js",
   "dependencies": {
     "@mattrglobal/jsonld-signatures-bbs": "^0.9.0",
     "cross-fetch": "^3.1.4",
